modules/gdscript/tests/scripts/runtime/errors/coroutine_result_without_await.gd
signal test_signal

func coroutine():
	await test_signal
	return 1

func test():
	var _result = self.call("coroutine")
